<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationScreen">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivUserImage"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/placeholder"
                android:visibility="visible"
                app:civ_border_color="@color/green"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/bold"
                android:text="@string/joinus_searching"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="@+id/ivUserImage"
                app:layout_constraintStart_toStartOf="@+id/ivUserImage"
                app:layout_constraintTop_toBottomOf="@+id/ivUserImage" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large_slogan"
                android:textAlignment="center"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/edit_text_bg"
                android:elevation="@dimen/_3sdp"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:hint="@string/hintname"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_small_text_color"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/edit_text_bg"
                android:elevation="@dimen/_3sdp"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:hint="@string/hintnum"
                android:inputType="number"
                android:paddingStart="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_small_text_color"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/etName"
                app:layout_constraintStart_toStartOf="@+id/etName"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <EditText
                android:id="@+id/etCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/edit_text_bg"
                android:elevation="@dimen/_3sdp"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:hint="@string/hintcountry"
                android:inputType="text"
                android:paddingStart="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_small_text_color"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/etPhoneNumber"
                app:layout_constraintStart_toStartOf="@+id/etPhoneNumber"
                app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/edit_text_bg"
                android:elevation="@dimen/_3sdp"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:hint="@string/hintaddress"
                android:inputType="text"
                android:paddingStart="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_small_text_color"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/etCountry"
                app:layout_constraintStart_toStartOf="@+id/etCountry"
                app:layout_constraintTop_toBottomOf="@+id/etCountry" />

            <EditText
                android:id="@+id/etAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/edit_text_bg"
                android:elevation="@dimen/_3sdp"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:hint="@string/hintage"
                android:inputType="number"
                android:paddingStart="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_small_text_color"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/etAddress"
                app:layout_constraintStart_toStartOf="@+id/etAddress"
                app:layout_constraintTop_toBottomOf="@+id/etAddress" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/edit_text_bg"
                android:elevation="@dimen/_3sdp"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:hint="@string/hintemail"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_small_text_color"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/etAge"
                app:layout_constraintStart_toStartOf="@+id/etAge"
                app:layout_constraintTop_toBottomOf="@+id/etAge" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/edit_text_bg"
                android:elevation="@dimen/_3sdp"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:hint="@string/hintpass"
                android:inputType="text"
                android:paddingStart="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_small_text_color"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/etEmail"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/light"
                android:text="@string/privacypolicy"
                android:textColor="@color/hint_small_text_color"
                android:textSize="@dimen/_9ssp"
                android:paddingStart="@dimen/_10sdp"
                android:button="@drawable/icon_privacypolicy"
                app:layout_constraintEnd_toEndOf="@+id/etPassword"
                app:layout_constraintStart_toStartOf="@+id/etPassword"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_filled"
                android:text="@string/register"
                android:layout_marginTop="@dimen/_5sdp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/checkBox"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="@+id/checkBox"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:fontFamily="@font/regular"
                android:text="@string/alreadyacc"
                android:textColor="@color/green"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btRegister"
                app:layout_constraintStart_toStartOf="@+id/btRegister"
                app:layout_constraintTop_toBottomOf="@+id/btRegister" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>