<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_46sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_circlegreen" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_69sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_46sdp"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/app_icon" />

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_26sdp"
                android:fontFamily="@font/bold"
                android:text="@string/welcomeback"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/large_slogan"
                android:textAlignment="center"
                android:textColor="@color/hint_small_text_color"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@+id/titleText"
                app:layout_constraintStart_toStartOf="@+id/titleText"
                app:layout_constraintTop_toBottomOf="@+id/titleText" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_26sdp"
                android:background="@drawable/edit_text_bg"
                android:elevation="@dimen/_3sdp"
                android:ems="10"
                android:hint="@string/hintemail"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_small_text_color"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/edit_text_bg"

                android:elevation="@dimen/_3sdp"
                android:ems="10"
                android:hint="@string/hintpass"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_small_text_color"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
                app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLoginWithGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_38sdp"
                android:background="@drawable/button_unfilled"
                android:drawableLeft="@drawable/icon_google"
                android:paddingLeft="@dimen/_89sdp"
                android:paddingRight="@dimen/_87sdp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/green"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/button_filled"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/buttonLoginWithGoogle"
                app:layout_constraintStart_toStartOf="@+id/buttonLoginWithGoogle"
                app:layout_constraintTop_toBottomOf="@+id/buttonLoginWithGoogle" />

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/regular"
                android:textSize="@dimen/_10ssp"
                android:text="@string/forgotpass"
                android:textColor="@color/green"
                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                app:layout_constraintStart_toStartOf="@+id/btnLogin"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_21sdp"
                android:fontFamily="@font/regular"
                android:textSize="@dimen/_10ssp"
                android:text="@string/dont_have_acc"
                android:textColor="@color/green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvForgetPassword"
                app:layout_constraintStart_toStartOf="@+id/tvForgetPassword" />

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:backgroundTint="@android:color/transparent"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.156"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_backgreen" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>